--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,8 +1,8 @@
-deploy.ant.properties.file=/Users/yv/Library/Application Support/NetBeans/8.0/config/GlassFishEE6/Properties/gfv31269677133.properties
+deploy.ant.properties.file=C:\\Users\\Michael\\AppData\\Roaming\\NetBeans\\8.0\\config\\GlassFishEE6\\Properties\\gfv3507579308.properties
 j2ee.platform.is.jsr109=true
-j2ee.server.domain=/Applications/NetBeans/glassfish-4.0/glassfish/domains/domain1
-j2ee.server.home=/Applications/NetBeans/glassfish-4.0/glassfish
-j2ee.server.instance=[/Applications/NetBeans/glassfish-4.0/glassfish:/Applications/NetBeans/glassfish-4.0/glassfish/domains/domain1]deployer:gfv3ee6:localhost:4848
-j2ee.server.middleware=/Applications/NetBeans/glassfish-4.0
+j2ee.server.domain=C:/Users/Michael/Documents/GlassFish_Server/glassfish/domains/domain1
+j2ee.server.home=C:/Users/Michael/Documents/GlassFish_Server/glassfish
+j2ee.server.instance=[C:\\Users\\Michael\\Documents\\GlassFish_Server\\glassfish;C:\\Users\\Michael\\Documents\\GlassFish_Server\\glassfish\\domains\\domain1]deployer:gfv3ee6wc:localhost:4848
+j2ee.server.middleware=C:/Users/Michael/Documents/GlassFish_Server
 selected.browser=SL[/Browsers/FirefoxBrowser
-user.properties.file=/Users/yv/Library/Application Support/NetBeans/8.0/build.properties
+user.properties.file=C:\\Users\\Michael\\AppData\\Roaming\\NetBeans\\8.0\\build.properties
