--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -4,5 +4,5 @@ j2ee.server.domain=C:/Users/Michael/Documents/GlassFish_Server/glassfish/domains
 j2ee.server.home=C:/Users/Michael/Documents/GlassFish_Server/glassfish
 j2ee.server.instance=[C:\\Users\\Michael\\Documents\\GlassFish_Server\\glassfish;C:\\Users\\Michael\\Documents\\GlassFish_Server\\glassfish\\domains\\domain1]deployer:gfv3ee6wc:localhost:4848
 j2ee.server.middleware=C:/Users/Michael/Documents/GlassFish_Server
-selected.browser=SL[/Browsers/FirefoxBrowser
+selected.browser=Chrome
 user.properties.file=C:\\Users\\Michael\\AppData\\Roaming\\NetBeans\\8.0\\build.properties
