--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -31,6 +31,7 @@ endorsed.classpath=\
     ${libs.javaee-endorsed-api-6.0.classpath}
 excludes=
 file.reference.BootsFaces-0.3.6-dist.jar=src\\java\\BootsFaces-0.3.6-dist.jar
+file.reference.primefaces-5.0.jar=src\\java\\primefaces-5.0.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -138,7 +139,8 @@ j2ee.server.type=gfv3ee6
 jar.compress=false
 javac.classpath=\
     ${libs.MySQLDriver.classpath}:\
-    ${file.reference.BootsFaces-0.3.6-dist.jar}
+    ${file.reference.BootsFaces-0.3.6-dist.jar}:\
+    ${file.reference.primefaces-5.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
